Load nouns from csv

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:mysql://mysql.cs.bangor.ac.uk/jcj23xfb
 spring.datasource.username=jcj23xfb
 spring.datasource.password=4d0f358acb
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
